@@ -314,6 +314,7 @@ Release 0.20.0 - Unreleased
    HBASE-1739  hbase-1683 broke splitting; only split three logs no matter
                what N was
    HBASE-1737  Regions unbalanced when adding new node
+   HBASE-1745  [tools] Tool to kick region out of inTransistion
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
